# xTdb

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  build.bat  build.sh
docs/: PHD_compression_and_storage_summary.md  WAL_STATUS_REPORT.md  compact_archiving_complete.md  competitive_performance_comparison.md  design.md  parallelism_optimization_plan.md  parallelism_phase2_complete.md  parallelism_phase3_complete.md  parallelism_phase4_complete.md  performance_benchmark_results.md  phase10_summary.md  phase11_summary.md  phase1_summary.md  phase2_summary.md  phase3_summary.md  phase4_summary.md  phase5_summary.md  phase6_summary.md  phase7_summary.md  phase8_summary.md  phase9_summary.md  phd_integration_analysis.md  phd_integration_preparation.md  phd_integration_ready.md  plan.md  raw_to_compact_archive_plan.md  rotating_wal_integration.md  rotating_wal_integration_complete.md  write_strategy_analysis.md  xts_api_template.h
examples/: README.md  api_example.c
include/xTdb/: aligned_io.h  archive_manager.h  archive_types.h  block_accessor.h  block_device_container.h  block_reader.h  block_writer.h  chunk_sealer.h  compact_archive_manager.h  compact_archiver.h  compact_container.h  compact_layout.h  compressor.h  constants.h  container.h  container_manager.h  directory_builder.h  file_container.h  layout_calculator.h  mem_buffer.h  metadata_sync.h  platform_compat.h  quantized_16_decoder.h  quantized_16_encoder.h  raw_scanner.h  resampling_engine.h  rotating_wal.h  state_mutator.h  storage_engine.h  struct_defs.h  swinging_door_decoder.h  swinging_door_encoder.h  thread_pool.h  wal_reader.h  wal_writer.h  xtdb_api.h
src/: aligned_io.cpp  archive_manager.cpp  block_accessor.cpp  block_device_container.cpp  block_reader.cpp  block_writer.cpp  chunk_sealer.cpp  compact_archive_manager.cpp  compact_archiver.cpp  compact_container.cpp  compressor.cpp  compressor_zstd.cpp  container.cpp  container_manager.cpp  directory_builder.cpp  file_container.cpp  layout_calculator.cpp  mem_buffer.cpp  metadata_sync.cpp  quantized_16_decoder.cpp  quantized_16_encoder.cpp  raw_scanner.cpp  resampling_engine.cpp  rotating_wal.cpp  state_mutator.cpp  storage_engine.cpp  swinging_door_decoder.cpp  swinging_door_encoder.cpp  thread_pool.cpp  wal_reader.cpp  wal_writer.cpp  xtdb_api.cpp
tests/: BLOCK_DEVICE_TESTING.md  setup_loop_device.sh  test_aligned_buffer_stress.cpp  test_alignment.cpp  test_archive_workflow.cpp  test_block_accessor.cpp  test_block_device_advanced.cpp  test_block_device_integration.cpp  test_compact_archiver.cpp  test_compact_container.cpp  test_compact_minimal.cpp  test_compact_struct.cpp  test_compression_e2e.cpp  test_compression_integration.cpp  test_compressor.cpp  test_container_abstraction.cpp  test_crash_recovery.cpp  test_end_to_end.cpp  test_hybrid_debug.cpp  test_large_scale_simulation.cpp  test_layout.cpp  test_maintenance.cpp  test_minimal_repro.cpp  test_multi_resolution_query.cpp  test_performance_benchmark.cpp  test_quantized_16.cpp  test_read_coordinator.cpp  test_read_recovery.cpp  test_resampling.cpp  test_restart_consistency.cpp  test_rotating_wal.cpp  test_seal_directory.cpp  test_small_chunk.cpp  test_state_machine.cpp  test_struct_size.cpp  test_swinging_door.cpp  test_utils.h  test_write_coordinator.cpp  test_write_debug.cpp  test_write_path.cpp
